# string_verlet

./: LICENSE  README.md  index.html  pyproject.toml  search.js  string_demo.ipynb  string_verlet.html
.github/workflows/: docs.yml  publish.yml  python-app.yml
string_verlet/: __init__.py
tests/: test_verlet.py
